simulators/c_model/code/debugger/doval/src/ajit_validationParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : ajit_validation.g
 *     -                            On : 2021-03-18 04:49:14
 *     -                for the parser : ajit_validationParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "ajit_validationParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pajit_validationParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pajit_validationParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pajit_validationParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pajit_validationParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   ajit_validationParserTokenNames[33+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "A",
        (pANTLR3_UINT8) "Binary",
        (pANTLR3_UINT8) "BinaryDigit",
        (pANTLR3_UINT8) "BinaryPrefix",
        (pANTLR3_UINT8) "C",
        (pANTLR3_UINT8) "COMMENT",
        (pANTLR3_UINT8) "CPU",
        (pANTLR3_UINT8) "DecimalDigit",
        (pANTLR3_UINT8) "EQUAL",
        (pANTLR3_UINT8) "F",
        (pANTLR3_UINT8) "G",
        (pANTLR3_UINT8) "HexDigit",
        (pANTLR3_UINT8) "Hexadecimal",
        (pANTLR3_UINT8) "HexadecimalPrefix",
        (pANTLR3_UINT8) "I",
        (pANTLR3_UINT8) "Integer",
        (pANTLR3_UINT8) "L",
        (pANTLR3_UINT8) "M",
        (pANTLR3_UINT8) "N",
        (pANTLR3_UINT8) "O",
        (pANTLR3_UINT8) "P",
        (pANTLR3_UINT8) "R",
        (pANTLR3_UINT8) "S",
        (pANTLR3_UINT8) "T",
        (pANTLR3_UINT8) "U",
        (pANTLR3_UINT8) "VALUE",
        (pANTLR3_UINT8) "W",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "X",
        (pANTLR3_UINT8) "Y",
        (pANTLR3_UINT8) "Z",
        (pANTLR3_UINT8) "'['",
        (pANTLR3_UINT8) "']'"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 void
	line    (pajit_validationParser ctx);
static 
 void
	location    (pajit_validationParser ctx);
static 
 void
	reg_indexed    (pajit_validationParser ctx);
static 
 void
	reg_non_indx    (pajit_validationParser ctx);
static 
 void
	mem    (pajit_validationParser ctx);
static 
 void
	asi    (pajit_validationParser ctx);
static void	ajit_validationParserFree(pajit_validationParser ctx);
static void     ajit_validationParserReset (pajit_validationParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "ajit_validation.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new ajit_validationParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pajit_validationParser
ajit_validationParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return ajit_validationParserNewSSD(instream, NULL);
}

/** \brief Create a new ajit_validationParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pajit_validationParser
ajit_validationParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pajit_validationParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pajit_validationParser) ANTLR3_CALLOC(1, sizeof(ajit_validationParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in ajit_validationParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our ajit_validationParser interface
     */
    ctx->line	= line;
    ctx->location	= location;
    ctx->reg_indexed	= reg_indexed;
    ctx->reg_non_indx	= reg_non_indx;
    ctx->mem	= mem;
    ctx->asi	= asi;
    ctx->free			= ajit_validationParserFree;
    ctx->reset			= ajit_validationParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */

    /* Install the token table
     */
    PSRSTATE->tokenNames   = ajit_validationParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
ajit_validationParserReset (pajit_validationParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 ajit_validationParserFree(pajit_validationParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return ajit_validationParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_location_in_line154  */
static	ANTLR3_BITWORD FOLLOW_location_in_line154_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001000) };
static  ANTLR3_BITSET_LIST FOLLOW_location_in_line154	= { FOLLOW_location_in_line154_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EQUAL_in_line156  */
static	ANTLR3_BITWORD FOLLOW_EQUAL_in_line156_bits[]	= { ANTLR3_UINT64_LIT(0x0000000020000000) };
static  ANTLR3_BITSET_LIST FOLLOW_EQUAL_in_line156	= { FOLLOW_EQUAL_in_line156_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_VALUE_in_line160  */
static	ANTLR3_BITWORD FOLLOW_VALUE_in_line160_bits[]	= { ANTLR3_UINT64_LIT(0x0000000020000402) };
static  ANTLR3_BITSET_LIST FOLLOW_VALUE_in_line160	= { FOLLOW_VALUE_in_line160_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_VALUE_in_line166  */
static	ANTLR3_BITWORD FOLLOW_VALUE_in_line166_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000402) };
static  ANTLR3_BITSET_LIST FOLLOW_VALUE_in_line166	= { FOLLOW_VALUE_in_line166_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_CPU_in_line177  */
static	ANTLR3_BITWORD FOLLOW_CPU_in_line177_bits[]	= { ANTLR3_UINT64_LIT(0x0000000020000000) };
static  ANTLR3_BITSET_LIST FOLLOW_CPU_in_line177	= { FOLLOW_CPU_in_line177_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_VALUE_in_line181  */
static	ANTLR3_BITWORD FOLLOW_VALUE_in_line181_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_VALUE_in_line181	= { FOLLOW_VALUE_in_line181_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOF_in_line191  */
static	ANTLR3_BITWORD FOLLOW_EOF_in_line191_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_EOF_in_line191	= { FOLLOW_EOF_in_line191_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_reg_indexed_in_location203  */
static	ANTLR3_BITWORD FOLLOW_reg_indexed_in_location203_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_reg_indexed_in_location203	= { FOLLOW_reg_indexed_in_location203_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_reg_non_indx_in_location207  */
static	ANTLR3_BITWORD FOLLOW_reg_non_indx_in_location207_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_reg_non_indx_in_location207	= { FOLLOW_reg_non_indx_in_location207_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_mem_in_location211  */
static	ANTLR3_BITWORD FOLLOW_mem_in_location211_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_mem_in_location211	= { FOLLOW_mem_in_location211_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_asi_in_location215  */
static	ANTLR3_BITWORD FOLLOW_asi_in_location215_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_asi_in_location215	= { FOLLOW_asi_in_location215_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_set_in_reg_indexed227  */
static	ANTLR3_BITWORD FOLLOW_set_in_reg_indexed227_bits[]	= { ANTLR3_UINT64_LIT(0x0000000020000000) };
static  ANTLR3_BITSET_LIST FOLLOW_set_in_reg_indexed227	= { FOLLOW_set_in_reg_indexed227_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_VALUE_in_reg_indexed260  */
static	ANTLR3_BITWORD FOLLOW_VALUE_in_reg_indexed260_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_VALUE_in_reg_indexed260	= { FOLLOW_VALUE_in_reg_indexed260_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_set_in_reg_non_indx274  */
static	ANTLR3_BITWORD FOLLOW_set_in_reg_non_indx274_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_set_in_reg_non_indx274	= { FOLLOW_set_in_reg_non_indx274_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_M_in_mem315  */
static	ANTLR3_BITWORD FOLLOW_M_in_mem315_bits[]	= { ANTLR3_UINT64_LIT(0x0000000800000000) };
static  ANTLR3_BITSET_LIST FOLLOW_M_in_mem315	= { FOLLOW_M_in_mem315_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_35_in_mem319  */
static	ANTLR3_BITWORD FOLLOW_35_in_mem319_bits[]	= { ANTLR3_UINT64_LIT(0x0000000020000000) };
static  ANTLR3_BITSET_LIST FOLLOW_35_in_mem319	= { FOLLOW_35_in_mem319_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_VALUE_in_mem323  */
static	ANTLR3_BITWORD FOLLOW_VALUE_in_mem323_bits[]	= { ANTLR3_UINT64_LIT(0x0000001000000000) };
static  ANTLR3_BITSET_LIST FOLLOW_VALUE_in_mem323	= { FOLLOW_VALUE_in_mem323_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_36_in_mem325  */
static	ANTLR3_BITWORD FOLLOW_36_in_mem325_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_36_in_mem325	= { FOLLOW_36_in_mem325_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_A_in_asi337  */
static	ANTLR3_BITWORD FOLLOW_A_in_asi337_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_A_in_asi337	= { FOLLOW_A_in_asi337_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start line
 * ajit_validation.g:45:1: line : ( location EQUAL v= VALUE (m= VALUE )? ( CPU cpu_id= VALUE )? | EOF );
 */
static void
line(pajit_validationParser ctx)
{
    pANTLR3_COMMON_TOKEN    v;
    pANTLR3_COMMON_TOKEN    m;
    pANTLR3_COMMON_TOKEN    cpu_id;

    /* Initialize rule variables
     */

    v       = NULL;
    m       = NULL;
    cpu_id       = NULL;

    {
        {
            //  ajit_validation.g:46:2: ( location EQUAL v= VALUE (m= VALUE )? ( CPU cpu_id= VALUE )? | EOF )

            ANTLR3_UINT32 alt3;

            alt3=2;

            switch ( LA(1) )
            {
            case A:
            case C:
            case F:
            case G:
            case I:
            case L:
            case M:
            case N:
            case O:
            case P:
            case R:
            case S:
            case T:
            case U:
            case W:
            case Y:
            case Z:
            	{
            		alt3=1;
            	}
                break;
            case EOF:
            	{
            		alt3=2;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 3;
                EXCEPTION->state        = 0;


                goto rulelineEx;

            }

            switch (alt3)
            {
        	case 1:
        	    // ajit_validation.g:46:4: location EQUAL v= VALUE (m= VALUE )? ( CPU cpu_id= VALUE )?
        	    {
        	        FOLLOWPUSH(FOLLOW_location_in_line154);
        	        location(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulelineEx;
        	        }


        	         MATCHT(EQUAL, &FOLLOW_EQUAL_in_line156);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulelineEx;
        	        }


        	        v = (pANTLR3_COMMON_TOKEN) MATCHT(VALUE, &FOLLOW_VALUE_in_line160);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulelineEx;
        	        }


        	        // ajit_validation.g:46:28: (m= VALUE )?
        	        {
        	            int alt1=2;
        	            switch ( LA(1) )
        	            {
        	                case VALUE:
        	                	{
        	                		alt1=1;
        	                	}
        	                    break;
        	            }

        	            switch (alt1)
        	            {
        	        	case 1:
        	        	    // ajit_validation.g:46:29: m= VALUE
        	        	    {
        	        	        m = (pANTLR3_COMMON_TOKEN) MATCHT(VALUE, &FOLLOW_VALUE_in_line166);
        	        	        if  (HASEXCEPTION())
        	        	        {
        	        	            goto rulelineEx;
        	        	        }


        	        	        {
        	        	            ctx->mask_flag = 1;
        	        	        }


        	        	    }
        	        	    break;

        	            }
        	        }

        	        // ajit_validation.g:47:4: ( CPU cpu_id= VALUE )?
        	        {
        	            int alt2=2;
        	            switch ( LA(1) )
        	            {
        	                case CPU:
        	                	{
        	                		alt2=1;
        	                	}
        	                    break;
        	            }

        	            switch (alt2)
        	            {
        	        	case 1:
        	        	    // ajit_validation.g:47:5: CPU cpu_id= VALUE
        	        	    {
        	        	         MATCHT(CPU, &FOLLOW_CPU_in_line177);
        	        	        if  (HASEXCEPTION())
        	        	        {
        	        	            goto rulelineEx;
        	        	        }


        	        	        cpu_id = (pANTLR3_COMMON_TOKEN) MATCHT(VALUE, &FOLLOW_VALUE_in_line181);
        	        	        if  (HASEXCEPTION())
        	        	        {
        	        	            goto rulelineEx;
        	        	        }


        	        	        {
        	        	            ctx->cpu_id_flag = 1;
        	        	        }


        	        	    }
        	        	    break;

        	            }
        	        }

        	        {
        	             
        	            	
        	            	REC->cpu_id = (ctx->cpu_id_flag ? atoi((const char*) (cpu_id->getText(cpu_id))->chars) : 0);
        	            	REC->expected_value =  strdup(((const char*)((v->getText(v))->chars)));
        	            	REC->mask = (ctx->mask_flag ? strdup(((const char*)((m->getText(m))->chars))) : strdup("0xfffffffff"));
        	            	ctx->mask_flag = 0;
        	            	ctx->cpu_id_flag = 0;


        	        }


        	    }
        	    break;
        	case 2:
        	    // ajit_validation.g:56:5: EOF
        	    {
        	         MATCHT(EOF, &FOLLOW_EOF_in_line191);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulelineEx;
        	        }


        	        {
        	            (REC->c = strdup("x")); 
        	        }


        	    }
        	    break;

            }
        }
    }

    // This is where rules clean up and exit
    //
    goto rulelineEx; /* Prevent compiler warnings */
    rulelineEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end line */

/**
 * $ANTLR start location
 * ajit_validation.g:58:1: location : ( reg_indexed | reg_non_indx | mem | asi ) ;
 */
static void
location(pajit_validationParser ctx)
{
    /* Initialize rule variables
     */

    {
        // ajit_validation.g:58:10: ( ( reg_indexed | reg_non_indx | mem | asi ) )
        // ajit_validation.g:58:12: ( reg_indexed | reg_non_indx | mem | asi )
        {
            // ajit_validation.g:58:12: ( reg_indexed | reg_non_indx | mem | asi )
            {
                int alt4=4;
                switch ( LA(1) )
                {
                case F:
                case G:
                case I:
                case L:
                case O:
                case U:
                case Z:
                	{
                		alt4=1;
                	}
                    break;
                case C:
                case N:
                case P:
                case R:
                case S:
                case T:
                case W:
                case Y:
                	{
                		alt4=2;
                	}
                    break;
                case M:
                	{
                		alt4=3;
                	}
                    break;
                case A:
                	{
                		alt4=4;
                	}
                    break;

                default:
                    CONSTRUCTEX();
                    EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                    EXCEPTION->message      = (void *)"";
                    EXCEPTION->decisionNum  = 4;
                    EXCEPTION->state        = 0;


                    goto rulelocationEx;

                }

                switch (alt4)
                {
            	case 1:
            	    // ajit_validation.g:58:13: reg_indexed
            	    {
            	        FOLLOWPUSH(FOLLOW_reg_indexed_in_location203);
            	        reg_indexed(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulelocationEx;
            	        }


            	    }
            	    break;
            	case 2:
            	    // ajit_validation.g:58:27: reg_non_indx
            	    {
            	        FOLLOWPUSH(FOLLOW_reg_non_indx_in_location207);
            	        reg_non_indx(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulelocationEx;
            	        }


            	    }
            	    break;
            	case 3:
            	    // ajit_validation.g:58:42: mem
            	    {
            	        FOLLOWPUSH(FOLLOW_mem_in_location211);
            	        mem(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulelocationEx;
            	        }


            	    }
            	    break;
            	case 4:
            	    // ajit_validation.g:58:48: asi
            	    {
            	        FOLLOWPUSH(FOLLOW_asi_in_location215);
            	        asi(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulelocationEx;
            	        }


            	    }
            	    break;

                }
            }

        }

    }

    // This is where rules clean up and exit
    //
    goto rulelocationEx; /* Prevent compiler warnings */
    rulelocationEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end location */

/**
 * $ANTLR start reg_indexed
 * ajit_validation.g:60:1: reg_indexed : p= ( G | L | O | I | F | U | Z ) k= VALUE ;
 */
static void
reg_indexed(pajit_validationParser ctx)
{
    pANTLR3_COMMON_TOKEN    p;
    pANTLR3_COMMON_TOKEN    k;

    /* Initialize rule variables
     */

    p       = NULL;
    k       = NULL;

    {
        // ajit_validation.g:60:13: (p= ( G | L | O | I | F | U | Z ) k= VALUE )
        // ajit_validation.g:60:16: p= ( G | L | O | I | F | U | Z ) k= VALUE
        {
            p=(pANTLR3_COMMON_TOKEN)LT(1);

            if ( ((LA(1) >= F) && (LA(1) <= G)) || LA(1) == I || LA(1) == L || LA(1) == O || LA(1) == U || LA(1) == Z )
            {
                CONSUME();
                PERRORRECOVERY=ANTLR3_FALSE;
            }
            else
            {
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
                EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
                EXCEPTION->expectingSet = NULL;

                goto rulereg_indexedEx;
            }


            {
                REC->c = ((const char*)((p->getText(p))->chars));
            }


            k = (pANTLR3_COMMON_TOKEN) MATCHT(VALUE, &FOLLOW_VALUE_in_reg_indexed260);
            if  (HASEXCEPTION())
            {
                goto rulereg_indexedEx;
            }


            {

                	REC->reg_int=atoi(strdup((const char*)((k->getText(k))->chars)));

            }


        }

    }

    // This is where rules clean up and exit
    //
    goto rulereg_indexedEx; /* Prevent compiler warnings */
    rulereg_indexedEx: ;
